# kryptering

./: Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-rng-choice.md
src/: algorithm.rs  digest.rs  error.rs  kdf.rs  key.rs  lib.rs  traits.rs
src/hazmat/: aes_cbc.rs  dh.rs  mod.rs
src/pkcs11/: mod.rs
src/software/: cipher.rs  keyagreement.rs  keytransport.rs  keywrap.rs  mod.rs  sign.rs
